<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PeriCoach Production Test</string>
    <string name="ok">OK</string>
    <!-- ScanActivity -->
    <string name="scanactivity">SCAN DEVICE BARCODE</string>
    <string name="if_download">If prompted, please downoload the scanner from Google Play (please follow the instructions)</string>
    <string name="you_can_stop">You can stop the scanner pressing BACK</string>
    <string name="you_can_skip">You can input the barcode number manually or skip</string>
    <string name="scan_scan">SCAN</string>
    <string name="manually">INPUT MANUALLY</string>
    <string name="skip">SKIP SCAN</string>
    <string name="hint">Input barcode manually</string>
    <string name="error">Error</string>
    <string name="error_reading">Error reading barcode</string>
    <string name="invalid_data">Invalid data</string>
    <!-- Legacy -->
    <string name="msg_still_writing_file">Still writing session file...</string>
    <string name="no_results">No new results to Report.</string>
    <string name="error_failed_to_save_file">Failed to save session file.</string>
    <string name="selectjobactivity">Select job or create a new one</string>
    <string name="add_directions">Fill in both fields with text and click the "add" button.</string>
    <string name="add">add</string>
    <string name="scan">scan</string>
    <string name="delete_directions">To delete a row, type the "id" of the row in the field provided and press the "delete" button.</string>
    <string name="delete">delete</string>
    <string name="update_directions">To update a row, type the "id" of the row in the first field and type the new information into the next two fields.</string>
    <string name="retrieve">get</string>
    <string name="update">update</string>
    <string name="th_id">ID</string>
    <string name="th_text_one">Job #</string>
    <string name="th_text_two">Quantity</string>
    <string name="graph_width_prompt">Graph time window</string>

    <string-array name="graph_width_array">
        <item>10 seconds</item>
        <item>15 seconds</item>
        <item>20 seconds</item>
        <item>30 seconds</item>
        <item>60 seconds</item>
    </string-array>

    <string name="free_mode_name">Free Exercise Mode</string>
    <string name="menuitem_live_data">Live Data</string>
    <string name="menuitem_open_test">Open Test</string>
    <string name="menuitem_closed_test">Closed Test</string>
    <string name="menuitem_dynamic_test">Open Test</string>
    <string name="menuitem_new_closed_test">Closed Test</string>
    <string name="menuitem_user_settings">User Settings</string>
    <string name="menuitem_scan_device">Scan Device</string>
    <string name="menuitem_device_settings">Device Settings</string>
    <string name="menuitem_view_history">View History</string>
    <string name="menuitem_preferences">Preferences</string>
    <string name="menuitem_man_orders">Select Manufacturing Job Number</string>
    <string name="menuitem_about">About</string>
    <string name="menuitem_calibrate">Product Calibration</string>
    <string name="analytica_url">http://www.analyticamedical.com</string>
    <string name="scan_for_devices">Scan for devices</string>
    <string name="refresh_devices">Search for nearby PeriCoach devices</string>
    <string name="btmenu_unpaired">Pair with this device</string>
    <string name="btmenu_pairing">Pairing in progress...</string>
    <string name="btmenu_paired">Paired but not connected</string>
    <string name="btmenu_connected">Connected</string>
    <string name="btmenu_unknown">Unknown state</string>
    <string name="btinfo_connecting">Connecting...</string>
    <string name="btinfo_connection_failed">Connection failed.</string>
    <string name="btinfo_connection_title">Connection with device failed.</string>
    <string name="btinfo_connection_content">Bluetooth connection with PeriCoach device failed.</string>
    <string name="btinfo_connection_ticker">Bluetooth connection with device failed.</string>
    <string name="btinfo_connection_failed_no_device">Please select your device from the Device Settings screen.</string>
    <string name="error_failed_to_init_session">Failed to initialise session.</string>
    <string name="error_not_implemented">Not implemented in this release!</string>
    <string name="error_at_least_one_sensor">At least one sensor must be displayed on the session graph.</string>
    <string name="error_calibration_failed">Measurement Failed.</string>
    <string name="error_username_required">You must enter a username.</string>
    <string name="error_invalid_current_load">You must enter the current load (range 0 - 4095).</string>
    <string name="cue_position_device_hit_play">Position the device then hit Play</string>
    <string name="cue_hit_stop_when_done">Hit Stop when you\'re finished</string>
    <string name="cue_calibrating">Calibrating...</string>
    <string name="cue_session_starting">Session starting...</string>
    <string name="cue_clench">Clench</string>
    <string name="cue_hold">Hold your contraction...</string>
    <string name="cue_release">Release</string>
    <string name="cue_relax">Relax...</string>
    <string name="msg_calibrating_device">Taking Measurements...</string>
    <string name="msg_session_complete">Session complete - well done!</string>
    <string name="format_peak_strength">Peak Strength: %.2f%%</string>
    <string name="format_pass_margin">Pass Margin: %.1f%%</string>
    <string name="format_duration">Duration: %1$02d:%2$02d</string>
    <string name="format_rep_result">Rep %1$d - %2$.2f%%</string>
    <string name="msg_no_user">There is no user information set up. Would you like to configure your details now?</string>
    <string name="msg_no_max_force">You need to record your maximum strength before you can perform exercises. Would you like to record it now?</string>
    <string name="creating_programmes">Creating programme files...</string>
    <string name="creating_programmes_failed">Failed to create programme files.</string>
    <string name="device_battery_warning">Your PFMAT device battery is getting low and should be charged.</string>
    <string name="error_comms_lost">The connection has been lost, or the device is not responding.</string>

    <color name="white">#FFFFFF</color>

    <string name="title_activity_open_test">PeriCoach Open PCB Test</string>
    <string name="title_activity_closed_test">PeriCoach Closed Test</string>
    <string name="action_settings">Settings</string>
    <string name="barcode_default">Serial Number</string>
    <string name="close_test">Close Test</string>
    <string name="close_test_sure">Confirm you want to close this test</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_internet">Not connected to the Internet</string>
    <string name="no_internet_will_close">This application needs Internet. Please connect to the Internet and restart. </string>
    <string name="failed_to_post_title">Failed to upload results to remote folder</string>
    <string name="failed_to_post_content">Please check if your Internet connection is working</string>
    <string name="failed_to_post_ticker">Failed to upload, please check Internet connection</string>
    <string name="no_results_to_send">No Results to send</string>
    <string name="no_results_to_review">No Results to Review</string>
    <string name="invalid_number">Invalid number</string>

    <!-- New Open TEST -->
    <string name="menuitem_new_open_test">New Open Test</string>
    <string name="menuitem_experimental_closed_test">Experimental Closed Test</string>
    <string name="menuitem_integrated_oper_test_test">Integrated Open Test</string>
    <string name="default_prod_url">http://peritest.hopto.org/periprod/v1</string>
    <string name="default_dev_url">http://peritest.hopto.org/peridev/v1</string>
    <string name="default_productiontest_url">http://productiontest.pericoach.com/production/v1</string>
    <string name="reverse_orientation">reverse_orientation</string>
    <string name="unprocessed">unporcessed</string>
    <string name="download_all">download_all</string>
    <string name="download_unprocessed">download_unprocessed</string>
    <string name="BT_Addr">BT MAC ADDR: </string>
    <string name="use_mac">use_mac</string>
    <string name="copy_to_sd">copy_to_sd</string>

    <string-array name="action_list">
        <item>Manual</item>
        <item>Auto</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_logs">get_logs</string>
    <string name="barcode">BARCODE:&#160;</string>
    <string name="serial">S/N&#160;</string>
    <string name="address">ADDRESS:&#160;</string>
    <string name="executed">EXECUTED:&#160;</string>
    <string name="executed_executed">EXECUTED</string>
    <string name="passed">PASSED:&#160;</string>
    <string name="passed_passed">PASSED</string>
    <string name="open_open">OPEN:&#160;</string>
    <string name="closed">CLOSED:&#160;</string>
    <string name="yes_yes">YES</string>
    <string name="no_no">NO</string>
    <string name="na">N/A</string>
    <string name="test_type">TEST TYPE:&#160;</string>
    <string name="nominal">NOMINAL:&#160;</string>
    <string name="tolerance">TOLERANCE:&#160;</string>
    <string name="lower">LOWER:&#160;</string>
    <string name="upper">UPPER:&#160;</string>
    <string name="min">MIN:&#160;</string>
    <string name="max">MAX:&#160;</string>
    <string name="var">VAR:&#160;</string>
    <string name="no_description">NO DESCRIPTION</string>
    <string name="nothing_to_show">Nothing to show here</string>
    <string name="loading">Loading...</string>
    <string name="devices">Sync Devices</string>
    <string name="devices_sync_account_type">com.pietrantuono.preicoach.devices</string>
    <string name="devices_sync_provider_authority">com.analytica.devicesprovider</string>
    <string name="devices_sync_account">devices_sync_account</string>
    <string name="devices_sync_started">devices_sync_started</string>
    <string name="devices_sync_finished">devices_sync_finished</string>
    <string name="PERMISSION">com.pietrantuono.devices.permssion</string>
    <string name="perm_label">Permission for listening to syncadapetr</string>
    <string name="job_number">"Job number "</string>
    <string name="sort_order">Select sort order</string>
    <string name="barcode_for_test">90896680783</string>


</resources>