<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <Preference
        android:key="@string/unprocessed"
        android:title="" />
    <Preference
        android:key="@string/download_all"
        android:title="Download all records"
        android:summary="Processed and unprocessed records"
        android:icon="@drawable/ic_action_file_file_download"
        android:visible="true"
        android:showAsAction="always">
    </Preference>

    <Preference
        android:key="@string/download_unprocessed"
        android:title="Download unprocessed"
        android:summary="Unprocessed records"
        android:icon="@drawable/ic_action_file_file_download"
        android:visible="true"
        android:showAsAction="always">
    </Preference>


    <Preference
        android:key="@string/get_logs"
        android:title="Get app logs"
        android:summary="Get app logs"
        android:icon="@drawable/ic_action_log"
        android:visible="true"
        android:showAsAction="always">
    </Preference>
    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/use_mac"
        android:title="Use mac to connect"
        android:summary="Use mac to connect"
        android:visible="true"
        android:showAsAction="always"
        />

    <Preference android:title="Select IOIO" >
        <intent android:action="MY_ACTION" />
    </Preference>
    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/reverse_orientation"
        android:summary="Reverse screen orintation"
        android:title="Reverse orientation" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="manual"
        android:summary="Enable stepping through the test sequence"
        android:title="Manual Testing Mode" />
    <SwitchPreference
        android:defaultValue="true" 
        android:key="logging" 
        android:summary="Enable logging of test results" 
        android:title="Results Logging" />
	<SwitchPreference
	    android:disableDependentsState="true"
        android:defaultValue="true" 
        android:key="use_default_url" 
        android:summary="Use default url" 
        android:title="Use default url" />
	<EditTextPreference
	    android:dependency="use_default_url"
	    android:defaultValue="@string/default_url"
	    android:key="custom_url" 
        android:summary="Custom url" 
        android:title="Custom url" />


	
</PreferenceScreen>