<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textAppearance="?android:textAppearanceMedium"
            android:id="@+id/min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <LinearLayout
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textAppearance="?android:textAppearanceMedium"
            android:id="@+id/max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/var"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textAppearance="?android:textAppearanceMedium"
            android:id="@+id/var"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>